update QLineEdit text when updated preedit area text

QLineControl::processInputMethod() doesn't check preedit area text.
So inputting into QLineEdit through IMEs such as xim or scim become
sluggish and unresponsive.

There is this bug only in Qt4.6.x. In Qt4.7, this bug is fixed already.

Task-number:QTBUG-8807